@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2004-2025 The mzmine Development Team
+ * Copyright (c) 2004-2026 The mzmine Development Team
  *
  * Permission is hereby granted, free of charge, to any person
  * obtaining a copy of this software and associated documentation
@@ -43,7 +43,6 @@ import io.github.mzmine.datamodel.featuredata.IonMobilogramTimeSeries;
 import io.github.mzmine.datamodel.featuredata.IonTimeSeries;
 import io.github.mzmine.datamodel.featuredata.IonTimeSeriesUtils;
 import io.github.mzmine.datamodel.features.Feature;
-import io.github.mzmine.datamodel.features.FeatureAnnotationPriority;
 import io.github.mzmine.datamodel.features.FeatureListRow;
 import io.github.mzmine.datamodel.features.ModularDataModel;
 import io.github.mzmine.datamodel.features.ModularFeature;
@@ -84,7 +83,6 @@ import java.util.Set;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
@@ -243,10 +241,8 @@ public class FeatureUtils {
       return false;
     }
 
-    final List<FeatureAnnotation> matches1 = CompoundAnnotationUtils.streamFeatureAnnotations(row1)
-        .toList();
-    final List<FeatureAnnotation> matches2 = CompoundAnnotationUtils.streamFeatureAnnotations(row2)
-        .toList();
+    final List<FeatureAnnotation> matches1 = row1.getAllFeatureAnnotations();
+    final List<FeatureAnnotation> matches2 = row2.getAllFeatureAnnotations();
 
     if (matches1.isEmpty() && matches2.isEmpty()) {
       // no annotations available is still true
@@ -866,20 +862,8 @@ public class FeatureUtils {
   }
 
   public static List<IonType> extractAllIonTypes(FeatureListRow row) {
-    final List<IonType> allIonTypes = Arrays.stream(FeatureAnnotationPriority.values())
-        .flatMap(type -> {
-          final Object o = row.get(type.getAnnotationType());
-          if (!(o instanceof List<?> annotations)) {
-            return Stream.empty();
-          }
-          return switch (type) {
-            case MANUAL, LIPID, FORMULA -> Stream.empty();
-            case SPECTRAL_LIBRARY, EXACT_COMPOUND -> {
-              List<FeatureAnnotation> featureAnnotations = (List<FeatureAnnotation>) annotations;
-              yield featureAnnotations.stream().map(FeatureAnnotation::getAdductType);
-            }
-          };
-        }).filter(Objects::nonNull).collect(Collectors.toList());
+    final List<IonType> allIonTypes = CompoundAnnotationUtils.getAllFeatureAnnotations(row).stream()
+        .map(FeatureAnnotation::getAdductType).filter(Objects::nonNull).toList();
 
     if (row.getBestIonIdentity() != null) {
       final IonType ionType = row.getBestIonIdentity().getIonType();
@@ -945,8 +929,8 @@ public class FeatureUtils {
       }
       // try to get from match - but only if match was not defined
       if (match == null) {
-        return CompoundAnnotationUtils.streamFeatureAnnotations(row)
-            .map(FeatureAnnotation::getAdductType).filter(Objects::nonNull).findFirst();
+        return row.streamAllFeatureAnnotations().map(FeatureAnnotation::getAdductType)
+            .filter(Objects::nonNull).findFirst();
       }
     }
     return Optional.empty();
